# zenoh-cpp-rpc

./: .gitignore  CMakeLists.txt  DEVELOPMENT_PLAN.md  LEARNING_NOTES.md  Makefile  PROJECT_STRUCTURE.md  README.md  git_commands.md  test_client_improvements  test_client_improvements.cpp  test_client_msgpack  test_client_msgpack.cpp  test_compile  test_error_handling  test_error_handling.cpp  test_jsonrpc  test_jsonrpc.cpp  test_jsonrpc_manual  test_msgpack_support  test_msgpack_support.cpp  test_parameter_handling  test_parameter_handling.cpp  zenoh-cpp-rpc-fix-documentation.md
docs/: SESSION_MANAGEMENT.md  ZENOH_CPP_RPC_COMPLETE_FIX_GUIDE.md
examples/: client_example.cpp  server_example.cpp  session_management_example.cpp
include/zenoh_rpc/: errors.hpp  jsonrpc_client.hpp  jsonrpc_proto.hpp  jsonrpc_server.hpp  session.hpp  zenoh_rpc.hpp
src/: errors.cpp  jsonrpc_client.cpp  jsonrpc_proto.cpp  jsonrpc_server.cpp  session.cpp
tests/: test_client_msgpack.cpp  test_parameter_handling.cpp  test_query_communication.cpp  test_zenoh.cpp
tools/: simple_client.cpp  simple_query_client.cpp  simple_query_server.cpp  simple_server.cpp
